@@ -3,6 +3,7 @@
 date Version 3.00.20 (Beta 3)
 * Fixed FS#93 — "wxGrid -> Object type unknown in XRC."
 * Fixed FS#94 — "Typo in code generation which includes <wx/imaglist.h>."
+* Fixed FS#96 — "No XRC for wxStdDialogButtonSizer."
 
 02-12-2007 Version 3.00.19 (Beta 3)
 * Fixed FS#89 — "wxSpinCtrl cannot have negative min/max value."
